# frontier-parachain-template

./: .gitignore  Cargo.toml  README.md  zombienet-config.toml
.github/workflows/: test-code.yml
docs/: rust-setup.md  zombienet.md
examples/contract-erc20/: create-erc20-rpc.ts  create-erc20.ts  package.json
examples/contract-hello/: index.js  package.json
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  eth.rs  rpc.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
pallets/motion/: Cargo.toml
pallets/motion/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  mock.rs
polkadot-launch/: config.json
runtime/: Cargo.toml
runtime/src/: constants.rs  lib.rs  precompiles.rs  xcm_config.rs
