[package]
authors = ["Anonymous"]
build = "build.rs"
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
name = "frontier-parachain-node"
repository = "https://github.com/paritytech/cumulus/"
version = "0.9.430"

[dependencies]
async-trait = "0.1"
clap = {version = "4.2.3", features = ["derive", "deprecated"]}
codec = {package = "parity-scale-codec", version = "3.2.1"}
color-print = "0.3.4"
futures = "0.3.28"
jsonrpsee = {version = "0.16.2", features = ["server", "macros"]}
log = "0.4.17"
serde = {version = "1.0.160", features = ["derive"]}

# Local
frontier-parachain-runtime = {path = "../runtime"}

# Substrate
frame-benchmarking = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-chain-spec = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-cli = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-client-api = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-consensus = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-executor = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-network = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-network-common = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-network-sync = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-rpc = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-service = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43", features = ["default"]}
sc-sysinfo = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-telemetry = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-tracing = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-api = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-blockchain = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-core = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-io = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-keystore = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-offchain = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-runtime = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-session = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-timestamp = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
substrate-prometheus-endpoint = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}
try-runtime-cli = {git = "https://github.com/paritytech/substrate", optional = true, "branch" = "polkadot-v0.9.43"}

# Polkadot
polkadot-cli = {git = "https://github.com/paritytech/polkadot", features = ["rococo-native"], branch = "release-v0.9.43"}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43"}
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43"}
xcm = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.43"}

# Cumulus
cumulus-client-cli = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}
cumulus-client-consensus-common = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}
cumulus-client-network = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}
cumulus-client-service = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}
cumulus-relay-chain-interface = {git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.43"}

# Frontier
fc-cli = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43"}
fc-consensus = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43"}
fc-db = {git = "https://github.com/paritytech/frontier", features = ["default", "sql"], branch = "polkadot-v0.9.43"}
fc-mapping-sync = {git = "https://github.com/paritytech/frontier", features = ["sql"], branch = "polkadot-v0.9.43"}
fc-rpc = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43", features = ["rpc-binary-search-estimate"]}
fc-rpc-core = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43"}
fc-storage = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43"}
fp-dynamic-fee = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43"}
fp-evm = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43"}
fp-rpc = {git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.43"}

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate", "branch" = "polkadot-v0.9.43"}

[features]
default = []
runtime-benchmarks = [
  "try-runtime-cli/try-runtime",
  "frontier-parachain-runtime/runtime-benchmarks",
  "polkadot-cli/runtime-benchmarks",
]
try-runtime = [
  "try-runtime-cli/try-runtime",
  "frontier-parachain-runtime/try-runtime",
]
